Fetching weather for current location

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,4 +15,11 @@
       </div>
     </div>
   </form>
+
+
+  <form action="/myloc" method="POST">
+    <div>
+      <button type="submit" class="btn btn-primary mb-2">Get my Location Weather</button>
+    </div>
+  </form>
   <% include ('partials/footer') %>
